HTML, CSS, JS 수정 및 앨범 정보 업데이트

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
         <div id="song-info">
             <p class="info-placeholder">노래 표지를 선택하면 설명이 나타납니다.</p>
         </div>
-    </section>
+    </section><!DOCTYPE html>
 
     <section class="player-box">
         <h2>재생하기</h2>
@@ -31,26 +31,26 @@
 
 <section class="album-section">
     <div class="album-item">
-        <img src="img/song1.jpg" alt="노래1" class="album"
-             data-title="노래 제목 1"
-             data-info="이 노래를 좋아하는 이유와 설명을 작성하세요."
-             data-url="https://youtube.com/링크1">
+        <img src="img/song1.jpg" alt="Dynamite" class="album"
+             data-title="BTS - Dynamite"
+             data-info="힘들거나 지친 하루가 지속되는 날에 이 노래를 들으면 에너지가 넘쳐서 좋아하게 되었어요.">
+             data-url="https://www.youtube.com/watch?v=381X4GT20nk">
         <p class="album-title">노래 제목 1</p>
     </div>
 
     <div class="album-item">
-        <img src="img/song2.jpg" alt="노래2" class="album"
-             data-title="노래 제목 2"
-             data-info="이 노래를 좋아하는 이유와 설명을 작성하세요."
-             data-url="https://youtube.com/링크2">
+        <img src="img/song2.jpg" alt="TOMBOY" class="album"
+             data-title="I-DLE - TOMBOY"
+             data-info="파격적이고 역동적인 노래라서 듣다보면 저도모르게 신이 나요."
+             data-url="https://www.youtube.com/watch?si=-dMGdFdZm_QJCgwC&v=Jh4QFaPmdss&feature=youtu.be">
         <p class="album-title">노래 제목 2</p>
     </div>
 
     <div class="album-item">
-        <img src="img/song3.jpg" alt="노래3" class="album"
-             data-title="노래 제목 3"
-             data-info="이 노래를 좋아하는 이유와 설명을 작성하세요."
-             data-url="https://youtube.com/링크3">
+        <img src="img/song3.jpg" alt="Blue Valentine"cass="album"
+             data-title="NMIXX - Blue Valentine"
+             data-info="멜로디와 보컬이 조화를 이루어 마음이 편안해져서 좋아하게 됐어요."
+             data-url="https://www.youtube.com/watch?v=EmeW6li6bbo">
         <p class="album-title">노래 제목 3</p>
     </div>
 </section>
