--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div class="album-item">
         <img src="img/song1.jpg" alt="Dynamite" class="album"
              data-title="BTS - Dynamite"
-             data-info="힘들거나 지친 하루가 지속되는 날에 이 노래를 들으면 에너지가 넘쳐서 좋아하게 되었어요.">
+             data-info="힘들거나 지친 하루가 지속되는 날에 이 노래를 들으면 에너지가 넘쳐서 좋아하게 되었어요."
              data-url="https://www.youtube.com/watch?v=381X4GT20nk">
-        <p class="album-title">노래 제목 1</p>
+         <p class="album-title">노래 제목 1</p>
     </div>
 
     <div class="album-item">
