--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="song-info">
             <p class="info-placeholder">노래 표지를 선택하면 설명이 나타납니다.</p>
         </div>
-    </section><!DOCTYPE html>
+    </section>
 
     <section class="player-box">
         <h2>재생하기</h2>
@@ -47,7 +47,7 @@
     </div>
 
     <div class="album-item">
-        <img src="img/song3.jpg" alt="Blue Valentine"cass="album"
+        <img src="img/song3.jpg" alt="Blue Valentine"class="album"
              data-title="NMIXX - Blue Valentine"
              data-info="멜로디와 보컬이 조화를 이루어 마음이 편안해져서 좋아하게 됐어요."
              data-url="https://www.youtube.com/watch?v=EmeW6li6bbo">
