--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -35,7 +36,7 @@
              data-title="BTS - Dynamite"
              data-info="힘들거나 지친 하루가 지속되는 날에 이 노래를 들으면 에너지가 넘쳐서 좋아하게 되었어요."
              data-url="https://www.youtube.com/watch?v=381X4GT20nk">
-         <p class="album-title">노래 제목 1</p>
+        <p class="album-title">노래 제목 1</p>
     </div>
 
     <div class="album-item">
@@ -47,7 +48,7 @@
     </div>
 
     <div class="album-item">
-        <img src="img/song3.jpg" alt="Blue Valentine"class="album"
+        <img src="img/song3.jpg" alt="Blue Valentine" class="album"
              data-title="NMIXX - Blue Valentine"
              data-info="멜로디와 보컬이 조화를 이루어 마음이 편안해져서 좋아하게 됐어요."
              data-url="https://www.youtube.com/watch?v=EmeW6li6bbo">
@@ -57,4 +58,4 @@
 
 <script src="script.js"></script>
 </body>
-</html>
+</html
