--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
              data-title="BTS - Dynamite"
              data-info="힘들거나 지친 하루가 지속되는 날에 이 노래를 들으면 에너지가 넘쳐서 좋아하게 되었어요."
              data-url="https://www.youtube.com/watch?v=gdZLi9oWNZg">
-        <p class="BTS">노래 제목 1</p>
+        <p class="album title">BTS</p>
     </div>
 
     <div class="album-item">
@@ -44,7 +44,7 @@
              data-title="I-DLE - TOMBOY"
              data-info="파격적이고 역동적인 노래라서 듣다보면 저도모르게 신이 나요."
              data-url="https://www.youtube.com/watch?si=-dMGdFdZm_QJCgwC&v=Jh4QFaPmdss&feature=youtu.be">
-        <p class="I-DLE">노래 제목 2</p>
+        <p class="album title">I-DLE</p>
     </div>
 
     <div class="album-item">
@@ -52,7 +52,7 @@
              data-title="NMIXX - Blue Valentine"
              data-info="멜로디와 보컬이 조화를 이루어 마음이 편안해져서 좋아하게 됐어요."
              data-url="https://www.youtube.com/watch?v=EmeW6li6bbo">
-        <p class="NMIXX">노래 제목 3</p>
+        <p class="album title">NMIXX</p>
     </div>
 </section>
 
